# aurora-launchpad-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  HOWTO.md  LICENSE  Makefile.toml  NOTICE  README.md
.github/workflows/: dafny-verification.yml  release.yml  rust.yml
alt_token/: Cargo.toml
contract/: Cargo.toml
contract/src/: admin_withdraw.rs  claim.rs  config.rs  deposit.rs  discount.rs  distribute.rs  launch_token.rs  lib.rs  mechanics.rs  storage_key.rs  traits.rs  utils.rs  view.rs  withdraw.rs
contract/src/admin/: lock.rs  mod.rs  withdraw.rs
contract/src/discount/: mod.rs  state.rs
contract/src/distribute/: deposit.rs  mod.rs  sale.rs
contract/src/mechanics/: claim.rs  deposit.rs  mod.rs  test_utils.rs  withdraw.rs
contract/src/tests/: contract.rs  mod.rs  utils.rs
contract/src/tests/discount/: fixed_price.rs  mod.rs  price_discovery.rs
factory/: Cargo.toml
factory/src/: lib.rs
res/: defuse.wasm
res/alt-defuse/: Cargo.toml
res/alt-defuse/src/: lib.rs
res/alt-token/: Cargo.toml
res/alt-token/src/: lib.rs
scripts/: gen-launchpad-types.sh
scripts/generate_abi/: index.ts  package-lock.json  package.json  tsconfig.json
tests/: Cargo.toml
tests/src/: env.rs  lib.rs  tests.rs
tests/src/env/: alt_defuse.rs  defuse.rs  fungible_token.rs  mod.rs  mt_token.rs  rpc.rs  sale_contract.rs
tests/src/tests/: deposit.rs  factory.rs  init.rs  lock.rs  mod.rs  tge.rs  withdraw.rs
tests/src/tests/admin_withdraw/: intents.rs  near.rs
tests/src/tests/claim/: intents.rs  near.rs
tests/src/tests/deposit/: discount.rs  mod.rs  nep141.rs  nep245.rs
tests/src/tests/distribution/: deposit.rs  intents.rs  near.rs
tests/src/tests/distribution/sale/: intents.rs  near.rs
tests/src/tests/individual_vesting/: intents.rs  mod.rs  near.rs
tests/src/tests/vesting/: intents.rs  mod.rs  near.rs
tests/src/tests/vesting/individual/: intents.rs  near.rs
tests/src/tests/view/: mod.rs
tests/src/tests/withdraw/: intents.rs  near.rs
types/: Cargo.toml
types/src/: admin_withdraw.rs  config.rs  date_time.rs  date_time_opt.rs  discount.rs  distribution.rs  duration.rs  lib.rs  tests.rs  utils.rs
verification/: README.md  dfyconfig.toml
verification/article/: Makefile  article.md  main.bbl  main.tex  references.bib
verification/src/: AssetCalculations.dfy  Math.dfy  MathLemmas.dfy  asset_calculations.dfy  claim.dfy  config.dfy  deposit.dfy  discounts.dfy  distribution.dfy  investments.dfy  launchpad.dfy  withdraw.dfy
verification/src/utils/: prelude.dfy
verification/tests/: AssetCalculations.dfy  ConfigTests.dfy  DepositTests.dfy  DiscountTests.dfy  LaunchpadDepositTests.dfy  LaunchpadDistributeTokensTests.dfy  LaunchpadUtils.dfy  LaunchpadWithdrawTests.dfy  WithdrawTests.dfy  utils.dfy
