[workspace.package]
version = "0.1.2"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2024"
description = "A factory smart contract for NEAR blockchain for creating sale contracts"
repository = "https://github.com/aurora-is-near/aurora-launchpad-contracts"
readme = "README.md"
publish = false

[workspace.dependencies]
anyhow = "1"
cargo-near-build = "0.7"
chrono = { version = "0.4", default-features = false }
near-gas = "0.3"
near-plugins = { git = "https://github.com/Near-One/near-plugins.git", tag = "v0.5.0" }
near-sdk = "5"
serde = { version = "1.0", features = ["derive"] }
near-workspaces = { version = "0.20", features = ["unstable"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
alloy-primitives = "1.2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[workspace]
resolver = "3"
members = [
    "contract",
    "factory",
    "tests",
    "types"
]
