[workspace.package]
version = "0.5.1"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2024"
repository = "https://github.com/aurora-is-near/aurora-launchpad-contracts"
readme = "README.md"
publish = false

[workspace.dependencies]
alloy-primitives = "1"
anyhow = "1"
cargo-near-build = "0.9"
chrono = { version = "0.4", default-features = false }
defuse = { git = "https://github.com/near/intents", rev = "11fe297" }
defuse-core = { git = "https://github.com/near/intents", rev = "11fe297" }
near-crypto = "0.31"
near-gas = "0.3"
near-jsonrpc-client = "0.18"
near-jsonrpc-primitives = "0.31"
near-plugins = { git = "https://github.com/Near-One/near-plugins.git", tag = "v0.5.0" }
near-primitives = "0.31"
near-sdk = "5"
near-workspaces = { version = "0.21", features = ["unstable"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[workspace]
resolver = "3"
members = [
    "contract",
    "factory",
    "tests",
    "types"
]
exclude = [
    "res/alt-token",
    "res/alt-defuse"
]
