[workspace.package]
version = "0.7.1"
authors = ["Aurora Labs <hello@aurora.dev>"]
edition = "2024"
repository = "https://github.com/aurora-is-near/aurora-launchpad-contracts"
readme = "README.md"
publish = false

[workspace.dependencies]
alloy-primitives = "1"
anyhow = "1"
aurora-launchpad-types = { path = "types" }
cargo-near-build = "0.11"
chrono = { version = "0.4", default-features = false }
defuse = { git = "https://github.com/near/intents", tag = "defuse/v0.4.2" }
near-crypto = "0.36"
near-gas = "0.3"
near-jsonrpc-client = "0.21"
near-jsonrpc-primitives = "0.36"
near-plugins = "0.5"
near-primitives = "0.36"
near-sdk = "5"
near-workspaces = { version = "0.22", features = ["unstable"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[workspace]
resolver = "3"
members = [
    "contract",
    "factory",
    "tests",
    "types"
]
exclude = [
    "res/alt-token",
    "res/alt-defuse"
]
