[package]
name = "aurora-launchpad-tests-alt-token"
description = "NEP-141 token used in tests for Launchpad contract"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true

[lints]
workspace = true
