[package]
name = "aurora-launchpad-contract"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.0-rust-1.86.0"
image_digest = "sha256:3220302ebb7036c1942e772810f21edd9381edf9a339983da43487c77fbad488"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
aurora-launchpad-types = { path = "../types" }
near-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
near-plugins.workspace = true
alloy-primitives.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
