[package]
name = "aurora-launchpad-contract"
description = "Launchpad smart contract for NEAR blockchain"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
alloy-primitives.workspace = true
aurora-launchpad-types.workspace = true
chrono = { workspace = true, features = ["alloc", "serde"] }
defuse.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true

[features]
abi = ["aurora-launchpad-types/abi", "defuse/abi"]
