[package]
name = "aurora-launchpad-factory"
description = "A factory smart contract for NEAR blockchain for creating sale contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.17.0-rust-1.86.0"
image_digest = "sha256:1784ca6310f3496f0048356ce420921c8f5fdf71ee8124d43a2e1ceb1f70db8a"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
aurora-launchpad-types = { path = "../types" }
near-sdk = { workspace = true }
near-plugins = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
