[package]
name = "aurora-launchpad-factory"
description = "A factory smart contract for NEAR blockchain for creating sale contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
aurora-launchpad-types.workspace = true
near-sdk.workspace = true
near-plugins.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
