[package]
name = "aurora-launchpad-tests"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
aurora-launchpad-types = { path = "../types" }
cargo-near-build = { workspace = true, features = ["build_internal"] }
near-gas.workspace = true
near-sdk.workspace = true
near-workspaces.workspace = true
tokio = { workspace = true, features = ["io-util", "macros"] }

[lints]
workspace = true
