[package]
name = "aurora-launchpad-types"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
alloy-primitives.workspace = true
chrono = { workspace = true, features = ["alloc", "serde"] }
near-sdk = { workspace = true, features = ["non-contract-usage", "abi", "schemars", "near-abi"] }

[lints]
workspace = true
